--- a/test/autocomplete/test.html
+++ b/test/autocomplete/test.html
@@ -8,7 +8,12 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
+
+  <input name="no-id" />
+
   <script src="http://code.jquery.com/qunit/qunit-1.18.0.js"></script>
+  <script src="../jquery-2.1.4.js"></script>
+  <script src="../../src/autocomplete.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
